--- a/Chess.DesktopClient/GameWindow.xaml
+++ b/Chess.DesktopClient/GameWindow.xaml
@@ -1,14 +1,12 @@
-﻿<Window x:Class="Chess.DesktopClient.MainWindow"
+﻿<Window x:Class="Chess.DesktopClient.GameWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Chess.DesktopClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="200" Width="300">
+        Title="GameWindow" Height="900" Width="1600">
     <Grid>
-        <Menu>
-            <Button Margin="65" Height="50" Width="150" Content="Начать" FontSize="20" Click="OnStartClick"/>
-        </Menu>
+        
     </Grid>
 </Window>
