--- a/Chess.DesktopClient/GameWindow.xaml
+++ b/Chess.DesktopClient/GameWindow.xaml
@@ -8,6 +8,6 @@
         Title="GameWindow" Height="900" Width="1600">
     <Grid>
         <Canvas Width="800" Height="800" x:Name="_canvas" MouseLeftButtonUp="SelectFigure" MouseRightButtonUp="SetFigure"/>
-        <TextBlock Margin="10,42,1350,770" x:Name="turn"/>
+        <TextBlock Margin="10,42,1200,600" x:Name="turn" FontSize="20"/>
     </Grid>
 </Window>
