--- a/Chess.DesktopClient/GameWindow.xaml
+++ b/Chess.DesktopClient/GameWindow.xaml
@@ -12,5 +12,6 @@
         <TextBlock Margin="10,321,1200,321" x:Name="whitesEaten" FontSize="20"/>
         <TextBlock Margin="10,600,1200,42" x:Name="blacksEaten" FontSize="20"/>
         <TextBox Margin="1250,82,0,639" x:Name="CheatText"/>
+        <TextBlock Margin="1230,321,0,321" x:Name="movesCount" FontSize="20"/>
     </Grid>
 </Window>
